Install the generated documents into the porting.guide directory.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@13356 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/modules/vrjuggler/doc/porting.guide/Makefile
+++ b/modules/vrjuggler/doc/porting.guide/Makefile
@@ -15,7 +15,7 @@ PDF_FILES=	$(NAME).pdf
 
 # Fill these in!!  Together, they make up the installation prefix.
 webroot=	$(HOME)/public_html/jugglerweb
-instdir=	vrjuggler/$(PROJECT_NUMBER)/migration.guide
+instdir=	vrjuggler/$(PROJECT_NUMBER)/porting.guide
 
 prefix=		$(webroot)/$(instdir)
 #INSTALL_DIRS=	figures
