--- a/modules/vrjuggler/doc/migration/Makefile
+++ b/modules/vrjuggler/doc/migration/Makefile
@@ -15,7 +15,7 @@ PDF_FILES=	$(NAME).pdf
 
 # Fill these in!!  Together, they make up the installation prefix.
 webroot=	$(HOME)/public_html/jugglerweb
-instdir=	vrjuggler/$(PROJECT_NUMBER)/migration.guide
+instdir=	vrjuggler/$(PROJECT_NUMBER)/porting.guide
 
 prefix=		$(webroot)/$(instdir)
 #INSTALL_DIRS=	figures
