New feature: Created an interface for vrjconfig to use while communicating with a running VR Juggler application. Also fixed a few minor bugs in the c++ code for RTRC.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13361 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/rtrc/Makefile.in
+++ b/juggler/modules/jackal/rtrc/Makefile.in
@@ -76,8 +76,8 @@ EXTRA_JAVA_SRCS_PATH=	$(IDL_GENDIR)/jccl
 # -----------------------------------------------------------------------------
 # Java-related setup
 # -----------------------------------------------------------------------------
-JARS=		jccl_rtrc.jar
-BEANS=
+JARS=		
+BEANS=	        jccl_rtrc
 
 IDL_JAVA_FILES=	RTRCInterfaceSubject.java
 
