--- a/juggler/modules/jackal/configure.in
+++ b/juggler/modules/jackal/configure.in
@@ -394,8 +394,8 @@ fi
 
 jccl_extra_ldflags="$APP_EXTRA_LIBS_BEGIN"
 
-jars='jccl_rtrc.jar'
-beans='jccl_config.jar jccl_editors.jar'
+#jars=''
+beans='jccl_config.jar jccl_editors.jar jccl_rtrc.jar'
 
 # XXX: For now, we won't include $JDOM_JAR in the JAR files output by
 # jccl-config.  This is okay (for now) because Tweek depends on JDOM, and we
@@ -408,9 +408,10 @@ beans='jccl_config.jar jccl_editors.jar'
 #fi
 
 changequote(<<, >>)
-jccl_java_api_jars=`echo "$jars" | sed -e 's/\(jccl_[A-Za-z]*\.jar\)/${prefix}\/bin\/\1/g' -e "s/ /$JCPS/g"`
+#jccl_java_api_jars=`echo "$jars" | sed -e 's/\(jccl_[A-Za-z]*\.jar\)/${prefix}\/bin\/\1/g' -e "s/ /$JCPS/g"`
 jccl_java_api_beans=`echo "$beans" | sed -e 's/\(jccl_[A-Za-z]*\.jar\)/${prefix}\/bin\/beans\/\1/g' -e "s/ /$JCPS/g"`
-jccl_java_api_jars="${jccl_java_api_jars}${JCPS}${jccl_java_api_beans}"
+#jccl_java_api_jars="${jccl_java_api_jars}${JCPS}${jccl_java_api_beans}"
+jccl_java_api_jars="$jccl_java_api_beans"
 changequote([, ])
 
 VJ_VERSION_GROK(VERSION)
