New feature:	vrj::OsgApp can be exposed so that Python application 		objects can derive from it and make use of PyOSG.
The bindings for vrj::OsgApp are compiled optionally and depend on an
installation of OSG.  Note that this has not been tested other than to
verify that it does compile correctly.

Bumped version to 0.8.1.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13382 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/src/Makefile.in
+++ b/PyJuggler/src/Makefile.in
@@ -35,8 +35,9 @@ MKINSTALLDIRS=	$(scriptdir)/mkinstalldirs
 
 CXX=		@CXX@
 CXXFLAGS=	$(shell vrjuggler-config --cxxflags) @PYTHON_INCLUDES@	\
-		-I$(top_srcdir) -I$(srcdir)
+		-I$(top_srcdir) -I$(srcdir) $(DEFS)
 CXX_PLUGIN=	@CXX_PLUGIN@
+#DEFS=		@DEFS@
 INCLUDES=	$(shell vrjuggler-config --includes) -I$(top_srcdir)	\
 		-I$(srcdir)
 PYTHON=		@PYTHON@
@@ -109,6 +110,14 @@ VRJ_SRCS= \
 	vrj/_SimViewport.cpp		\
 	vrj/_User.cpp			\
 	vrj/_Viewport.cpp
+
+# Add the Open Scene Graph build bits if OSG is available.
+ifeq (@HAVE_OSG@, Y)
+   DEFS+=		-DPYJUGGLER_HAVE_OSG
+   INCLUDES+=		@OSG_INCLUDES@
+   VJ_EXTRA_LIBS+=	@OSG_LDFLAGS@ @OSG_LIBS@
+   VRJ_SRCS+=		vrj/_OsgApp.cpp
+endif
 
 VPR_OBJS=	$(VPR_SRCS:.cpp=.$(OBJEXT))
 JCCL_OBJS=	$(JCCL_SRCS:.cpp=.$(OBJEXT))
