--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/proxyeditor/Makefile.inc.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/proxyeditor/Makefile.inc.in
@@ -30,38 +30,20 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-# -----------------------------------------------------------------------------
-# Makefile.in for vrjuggler/vrjconfig/customeditors.  It requires GNU make.
-#
-# Generated for use on @PLATFORM@
-# -----------------------------------------------------------------------------
-
-# Include common definitions.
-include @topdir@/make.defs.mk
-
-# Prefix for recursive stuff.
-DIRPRFX=	vrjconfig/customeditors/
-
-BUILD_JAVA=   @BUILD_JAVA@
-BUILD_JAVA3D_EDITOR=   @BUILD_JAVA_3D_EDITOR@
-
-# Subdirectories used for recursion through the source tree.
-SUBDIR=	proxyeditor \
-	#displaywindoweditor 
-
-# Subdirectories to compile.
-ifeq ($(BUILD_JAVA), Y)
-   ifeq ($(BUILD_JAVA3D_EDITOR), Y)
-      SUBDIR += surfacedisplayeditor
-   endif
+ifndef NO_JAVA
+   BUILD_JAVA=	@BUILD_JAVA@
+else
+   BUILD_JAVA=	N
 endif
 
-$(RECTARGET): recursive
-
-customeditors:
-	$(MAKE) RECTARGET=build-editor recursive
-
-install-customeditors:
-	$(MAKE) RECTARGET=install-editor recursive
-
-include $(MKPATH)/dpp.subdir.mk
+proxyeditor-java:
+ifeq ($(BUILD_JAVA), Y)
+	@echo "------------------------------------------------"
+	@echo "Building code for the ProxyEditor"
+	@echo "------------------------------------------------"
+	@$(MAKE) java
+else
+	@echo "------------------------------------------------"
+	@echo "ProxyEditor build skipped"
+	@echo "------------------------------------------------"
+endif
