Added new files from Aron's last round of changes.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13385 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -674,6 +674,9 @@ AC_CONFIG_FILES([
    vrjconfig/Makefile
    vrjconfig/Makefile.inc
    vrjconfig/customeditors/Makefile
+   vrjconfig/customeditors/proxyeditor/build.xml
+   vrjconfig/customeditors/proxyeditor/Makefile
+   vrjconfig/customeditors/proxyeditor/Makefile.inc
    vrjconfig/customeditors/surfacedisplayeditor/build.xml
    vrjconfig/customeditors/surfacedisplayeditor/Makefile
    vrjconfig/customeditors/surfacedisplayeditor/Makefile.inc
