--- a/modules/jackal/Makefile.inc.in
+++ b/modules/jackal/Makefile.inc.in
@@ -413,6 +413,8 @@ _LOCAL_CLOBBER=	1
 
 EXTRA_OBJ_TARGETS=	build-java
 
+# Make sure we build java targets serially because javac is stupid and may try
+# to write to the same files at the same time while building different sources.
 build-java:
 ifdef NO_JAVA
 	@echo "------------------------------------------------"
@@ -420,7 +422,7 @@ ifdef NO_JAVA
 	@echo "------------------------------------------------"
 else
 ifeq ($(BUILD_JAVA), Y)
-	$(MAKE) RECTARGET=java recursive
+	$(MAKE) -j 1 RECTARGET=java recursive
 endif
 endif #ifdef NO_JAVA
 
