Backed out Revision 1.76.  Allowing the Java code to build in parallel prevents us from being sure that the pieces build in the right order to satisfy compile-time dependencies.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13392 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/Makefile.inc.in
+++ b/juggler/modules/jackal/Makefile.inc.in
@@ -413,6 +413,8 @@ _LOCAL_CLOBBER=	1
 
 EXTRA_OBJ_TARGETS=	build-java
 
+# Make sure we build java targets serially because javac is stupid and may try
+# to write to the same files at the same time while building different sources.
 build-java:
 ifdef NO_JAVA
 	@echo "------------------------------------------------"
@@ -420,7 +422,7 @@ ifdef NO_JAVA
 	@echo "------------------------------------------------"
 else
 ifeq ($(BUILD_JAVA), Y)
-	$(MAKE) RECTARGET=java recursive
+	$(MAKE) -j 1 RECTARGET=java recursive
 endif
 endif #ifdef NO_JAVA
 
