--- a/modules/tweek/java/Makefile.in
+++ b/modules/tweek/java/Makefile.in
@@ -66,8 +66,9 @@ JAVA_ORB_JAR=	@JAVA_ORB_JAR@
 #SKIN_LAF_DIR=	$(LAF_DIR)/skinlf/lib
 #SKIN_LAF_JARS=	$(SKIN_LAF_DIR)/skinlf.jar$(JCPS)$(SKIN_LAF_DIR)/themepack.zip
 METOUIA_JAR=	$(LAF_DIR)/metouia/metouia.jar
+JGOODIES_JAR=	$(LAF_DIR)/jgoodies-looks/looks.jar
 
-LAF_JARS=	$(METOUIA_JAR)
+LAF_JARS=	$(METOUIA_JAR)$(JCPS)$(JGOODIES_JAR)
 
 # The following check is done this way to prevent unwanted spaces from
 # appearing in $(CLASSPATH)
