Bug fixed:	The use of ar(1) was hard-coded into this file which 		could not possibly have meant good things for linking 		with Visual C++.
On Windows, use compiler flags based on those used by Boost.Build to
compile the example Boost.Python modules.  I removed a /D flag that I
know cannot be needed in this case.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13428 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/pyjutil/Makefile.in
+++ b/PyJuggler/pyjutil/Makefile.in
@@ -37,8 +37,19 @@ srcdir=		@srcdir@
 
 MKINSTALLDIRS=	$(scriptdir)/mkinstalldirs
 
+AR=		@AR@ $(ARFLAGS)
+AR_NAME_FLAG=	@AR_NAME_FLAG@
+ARFLAGS=	@ARFLAGS@
 CXX=		@CXX@
-CXXFLAGS=	$(shell vpr-config --cxxflags) @PYTHON_INCLUDES@ -I$(srcdir)
+
+ifeq (@OS_TYPE@, Win32)
+   CXXFLAGS=	$(shell vpr-config --includes) /Zm800 /Z7 /Od /Ob0 /GX	\
+		/GR /Op /Zc:wchar_t,forScope
+else
+   CXXFLAGS=	$(shell vpr-config --cxxflags)
+endif
+
+CXXFLAGS+=	@PYTHON_INCLUDES@ -I$(srcdir)
 
 PYTHON_VERSION=		@PYTHON_VERSION@
 
@@ -94,7 +105,7 @@ install:
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 
 $(PYJUTIL_ARC): $(OBJS)
-	ar -ruv $@ $(OBJS)
+	$(AR) $(AR_NAME_FLAG)$@ $(OBJS)
 
 #%.$(ARCEXT): %.$(OBJEXT)
 #	$(CXX) -shared -o $@ $< $(BOOST_PYTHON_LDFLAGS)			\
