Use compiler flags lifted from the command line printed by compiling the Boost.Python example modules with Visual C++ 7.x.  This is being done just to try to stay as close as possible to the way that the Boost.Python developers expect things to be done.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13433 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/src/Makefile.in
+++ b/PyJuggler/src/Makefile.in
@@ -34,8 +34,16 @@ top_srcdir=	@top_srcdir@
 MKINSTALLDIRS=	$(scriptdir)/mkinstalldirs
 
 CXX=		@CXX@
-CXXFLAGS=	$(shell vrjuggler-config --cxxflags) @PYTHON_INCLUDES@	\
-		-I$(top_srcdir) -I$(srcdir) $(DEFS)
+
+ifeq (@OS_TYPE@, Win32)
+   CXXFLAGS=	$(shell vrjuggler-config --includes) /Zm800 /Z7 /Od	\
+		/Ob0 /GX /GR /Op /DBOOST_PYTHON_DYNAMIC_LIB		\
+		/Zc:wchar_t,forScope
+else
+   CXXFLAGS=	$(shell vrjuggler-config --cxxflags)
+endif
+
+CXXFLAGS+=	@PYTHON_INCLUDES@ -I$(top_srcdir) -I$(srcdir) $(DEFS)
 CXX_PLUGIN=	@CXX_PLUGIN@
 #DEFS=		@DEFS@
 INCLUDES=	$(shell vrjuggler-config --includes) -I$(top_srcdir)	\
@@ -61,6 +69,10 @@ BOOST_PYTHON_LDFLAGS=	@BOOST_PYTHON_LDFLAGS@
 # Linker flags needed by all extension modules.
 LDFLAGS=		@EXTRA_LINK_FLAGS@ $(BOOST_PYTHON_LDFLAGS)	\
 			$(PYTHON_LDFLAGS)
+
+ifeq (@OS_TYPE@, Win32)
+   LDFLAGS+=		/DEBUG /subsystem:console /INCREMENTAL:NO
+endif
 
 PYJUTIL_LIB=		@PYJUTIL_LDFLAGS@
 
@@ -168,7 +180,7 @@ install:
 
 # Rule for generating a .cpp file from a .pyste file.
 %.cpp: %.pyste
-	$(PYSTE) --module=$(basename $(@F)) $<
+	$(PYSTE) --python-ns=pyj --module=$(basename $(@F)) $<
 
 %.$(OBJEXT): %.cpp
 	$(CXX) $(CXXFLAGS) $(OBJ_NAME_FLAG) -c $<
