--- a/modules/vapor/Makefile.in
+++ b/modules/vapor/Makefile.in
@@ -148,12 +148,7 @@ endif
 
 # Subdirectories used for recursion through the source tree.
 SUBDIR=		external	\
-		vpr/DynLoad	\
-		vpr/IO		\
-		vpr/Sync	\
-		vpr/Thread	\
-		vpr/Util	\
-		vpr/md
+		vpr
 
 # =============================================================================
 # Library targets.  The default is 'debug' as defined above.  The steps for
