Sync up with the other modules and push the vpr subdirectory enumeration off to the makefile in the vpr subdirectory.  This allows the installation of headers to be simplified a little since vpr/Makefile can handle installing the headers in its directory.
Noticed by:	browner10


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13439 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/Makefile.in
+++ b/juggler/modules/vapor/vpr/Makefile.in
@@ -40,7 +40,7 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
 # -----------------------------------------------------------------------------
-# Makefile.in for vpr.  It requires GNU make.
+# Makefile.in for vapor/vpr.  It requires GNU make.
 #
 # Generated for use on @PLATFORM@
 # -----------------------------------------------------------------------------
@@ -48,15 +48,29 @@
 # Include common definitions.
 include @topdir@/make.defs.mk
 
+includedir=	@includedir@/vpr
+srcdir=		@srcdir@
+top_srcdir=	@top_srcdir@
+INSTALL=	@INSTALL@
+SUBOBJDIR=	$(VPR_LIBRARY)
+
 # Prefix for recursive stuff.
-DIRPRFX		= vpr/
+DIRPRFX=	vpr/
 
-SUBDIR		= IO		\
-                  Sync		\
-                  Thread	\
-                  Util		\
-                  md
+SUBDIR=		DynLoad		\
+		IO		\
+		Sync		\
+		Thread		\
+		Util		\
+		md
 
-$(RECTARGET): recursive
+include $(MKPATH)/dpp.obj-subdir.mk
 
-include $(MKPATH)/dpp.subdir.mk
+# -----------------------------------------------------------------------------
+# Include dependencies generated automatically.
+# -----------------------------------------------------------------------------
+#ifndef DO_CLEANDEPEND
+#ifndef DO_BEFOREBUILD
+#   -include $(DEPEND_FILES)
+#endif
+#endif
