Moved the implementation of vpr::SystemBase::getStackTrace() into a .cpp file, mainly to get the platform-specific #ifdef's out of the header file. Besides that, there is really no point in inlining a function that will be called almost exclusively when an error/crash occurs.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13440 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/Makefile.in
+++ b/juggler/modules/vapor/vpr/Makefile.in
@@ -64,6 +64,8 @@ SUBDIR=		DynLoad		\
 		Util		\
 		md
 
+SRCS=		SystemBase.cpp
+
 include $(MKPATH)/dpp.obj-subdir.mk
 
 # -----------------------------------------------------------------------------
