Now that there is a .cpp file in this directory, we need to generate dependencies for it.  Oops.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13443 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/Makefile.in
+++ b/juggler/modules/vapor/vpr/Makefile.in
@@ -71,8 +71,8 @@ include $(MKPATH)/dpp.obj-subdir.mk
 # -----------------------------------------------------------------------------
 # Include dependencies generated automatically.
 # -----------------------------------------------------------------------------
-#ifndef DO_CLEANDEPEND
-#ifndef DO_BEFOREBUILD
-#   -include $(DEPEND_FILES)
-#endif
-#endif
+ifndef DO_CLEANDEPEND
+ifndef DO_BEFOREBUILD
+   -include $(DEPEND_FILES)
+endif
+endif
