Test for backtrace() in configure instead of restricting its use to Linux (even though that's probably the only place where GLIBC is used...).  As we find more ways of getting the backtrace from the C runtime, the configure test can be extended and refined.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13446 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/configure.in
+++ b/juggler/modules/vapor/configure.in
@@ -631,6 +631,20 @@ AC_CHECK_FUNC([sched_yield], [AC_DEFINE([HAVE_SCHED_YIELD])],
                     AC_DEFINE([HAVE_SCHED_YIELD]) ])])
 LIBS="${_vpr_save_LIBS}"
 
+# Test to see if the function backtrace() (a GLIBC feature) is available.
+# As of right now, we know of no other libc implementation with this feature,
+# so this test is not very sophisticated.
+AC_CACHE_CHECK([for backtrace], [ac_cv_has_backtrace],
+   [AC_TRY_COMPILE([#include <execinfo.h> ],
+                   [int size = backtrace(0, 0);],
+                   [ac_cv_has_backtrace='yes'],
+                   [ac_cv_has_backtrace='no'])])
+
+if test "x$ac_cv_has_backtrace" = "xyes" ; then
+   AC_DEFINE([HAVE_BACKTRACE], ,
+             [Define if the GLIBC backtrace() function is available.])
+fi
+
 # -----------------------------------------------------------------------------
 # Miscellaneous checks.
 # -----------------------------------------------------------------------------
