Make sure we use the available position-independent code (PIC) flags when building the modules.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13464 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/src/Makefile.in
+++ b/PyJuggler/src/Makefile.in
@@ -34,7 +34,7 @@ top_srcdir=	@top_srcdir@
 MKINSTALLDIRS=	$(scriptdir)/mkinstalldirs
 
 CXX=		@CXX@
-CXXFLAGS=	@BOOST_PYTHON_INCLUDES@
+CXXFLAGS=	@BOOST_PYTHON_INCLUDES@ @CXXFLAGS_DYNLIB@
 
 ifeq (@OS_TYPE@, Win32)
    CXXFLAGS+=	$(shell vrjuggler-config --includes) /Zm800 /GX /GR /Op	\
