Added a backwards compatiblity shim for the Juggler --> vrj library name change.  This shim allows this script to work with old makefiles that still ask for the library lists using the names "Juggler," "Juggler_ogl," and/or "Juggler_pf."  The actual library names returned are the new names, but it offers users a more transparent upgrade path.  Eventually, this revision should be backed out, but there is no rush.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13478 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjuggler-config.in
+++ b/juggler/modules/vrjuggler/vrjuggler-config.in
@@ -339,18 +339,18 @@ sub make_LDFLAGS ($;$$$)
    # Determine what VR Juggler libraries will be printed.
    my $vrj_libs = '';
 
-   if ( $LIBS{'vrj'} )
+   if ( $LIBS{'vrj'} || $LIBS{'Juggler'} )
    {
       $vrj_libs = ($echo_profiled ? qq(@vrj_prof_lib@) : qq(@vrj_lib@));
    }
 
-   if ( $LIBS{'vrj_ogl'} )
+   if ( $LIBS{'vrj_ogl'} || $LIBS{'Juggler_ogl'} )
    {
       $vrj_libs .= ($echo_profiled ? qq( @vrj_ogl_prof_lib@)
                                    : qq( @vrj_ogl_lib@));
    }
 
-   if ( $LIBS{'vrj_pf'} )
+   if ( $LIBS{'vrj_pf'} || $LIBS{'Juggler_pf'} )
    {
       $vrj_libs .= ($echo_profiled ? qq( @vrj_pf_prof_lib@)
                                    : qq( @vrj_pf_lib@));
