The default output from the --libs argument was the libraries needed for linking OpenGL-based applications.  Whether this could be called correct behavior, I don't know, but this change restores that default.  This is another revision that could be backed out in the future if this behavior is deemed undesirable.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13479 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjuggler-config.in
+++ b/juggler/modules/vrjuggler/vrjuggler-config.in
@@ -163,10 +163,11 @@ if ( $#ARGV != -1 )
       $LIBS{"$_"} = 1;
    }
 }
-# Fall back on printing whatever configure tells us is the "default" setting.
+# Fall back on printing the dependencies for OpenGL applications.
 else
 {
    $LIBS{'vrj'} = 1;
+   $LIBS{'vrj_ogl'} = 1;
 }
 
 # Print out the requested information.
