Fixed a typo in the name of the profiled OpenGL Draw Manager library I overlooked in the last revision.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13489 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -535,7 +535,7 @@ case $OS_TYPE in
         vrj_lib='-lvrj'
         vrj_prof_lib='-lvrj_p'
         vrj_ogl_lib='-lvrj_ogl'
-        vrj_ogl_prof_lib='-lJvrj_ogl_p'
+        vrj_ogl_prof_lib='-lvrj_ogl_p'
 
         if test "x$PERFORMER_API" = "xY" ; then
             vrj_pf_lib='-lvrj_pf'
