update the vrpn config chunk and the definition so that the vrpn driver works.
It has been tested against the vrpn null tracker code and worked, however it
still hasn't been tested against a running device.


git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13493 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/data/configFiles/example.vrpn.config
+++ b/juggler/modules/vrjuggler/data/configFiles/example.vrpn.config
@@ -56,8 +56,8 @@
     </position_filters>
   </PosProxy>
   <Vrpn name="Vrpn">
-    <trackerServer>Tracker0@alpha.cs.ucl.ac.uk</trackerServer>
-    <buttonServer>Button0@alpha.cs.ucl.ac.uk</buttonServer>
+    <trackerServer>Tracker0@localhost.localdomain</trackerServer>
+    <buttonServer>Button0@localhost.localdomain</buttonServer>
     <numTrackers>2</numTrackers>
     <numButtons>4</numButtons>
     <position_filters>
@@ -78,7 +78,7 @@
         <post_rotation>0.0</post_rotation>
       </PosXformFilter>
     </position_filters>
-    <deviceHost />
+    <deviceHost name="localhost.localdomain" />
   </Vrpn>
   <DigProxy name="Button0Proxy">
     <device>Vrpn</device>
