Be less demanding about the visual chosen for the display windows.  Instead of requring 32-bit color with a 16-bit depth buffer, give the display system the option to choose the best visual it can.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13498 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/data/configFiles/sim.c6viewports.mixin.config
+++ b/juggler/modules/vrjuggler/data/configFiles/sim.c6viewports.mixin.config
@@ -9,11 +9,12 @@
     <pipe>0</pipe>
     <frameBufferConfig>
       <OpenGLFBConfig name="GL Frame Buffer">
-        <redSize>8</redSize>
-        <greenSize>8</greenSize>
-        <blueSize>8</blueSize>
-        <alphaSize>8</alphaSize>
-        <depthBufferSize>16</depthBufferSize>
+        <visualID>-1</visualID>
+        <redSize>1</redSize>
+        <greenSize>1</greenSize>
+        <blueSize>1</blueSize>
+        <alphaSize>1</alphaSize>
+        <depthBufferSize>1</depthBufferSize>
         <fsaaEnable>0</fsaaEnable>
       </OpenGLFBConfig>
     </frameBufferConfig>
