It appears that I broke these configuration files quite a while ago, but no one seems to have noticed.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13500 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/data/configFiles/sim.digital.glove.mixin.config
+++ b/juggler/modules/vrjuggler/data/configFiles/sim.digital.glove.mixin.config
@@ -416,12 +416,12 @@
     <rightGlovePos>Right GlovePos Proxy</rightGlovePos>
   </SimDigitalGlove>
   <GloveProxy name="Glove Proxy">
-    <device />
+    <device>SimDigitalGlove</device>
     <unit>0</unit>
     <visible>1</visible>
   </GloveProxy>
   <GloveProxy name="Right Glove Proxy">
-    <device />
+    <device>SimDigitalGlove</device>
     <unit>1</unit>
     <visible>1</visible>
   </GloveProxy>
