--- a/juggler/modules/vrjuggler/data/configFiles/sim.glove.mixin.config
+++ b/juggler/modules/vrjuggler/data/configFiles/sim.glove.mixin.config
@@ -172,19 +172,19 @@
   </EventWindow>
   <proxyAlias name="VJGlove">
     <aliasName>VJGlove</aliasName>
-    <proxyPtr />
+    <proxyPtr>GloveProxy</proxyPtr>
   </proxyAlias>
   <proxyAlias name="VJGesture">
     <aliasName>VJGesture</aliasName>
-    <proxyPtr />
+    <proxyPtr>GestureProxy</proxyPtr>
   </proxyAlias>
   <GloveProxy name="GloveProxy">
-    <device />
+    <device>SimGloveGesture</device>
     <unit>0</unit>
     <visible>1</visible>
   </GloveProxy>
   <GestureProxy name="GestureProxy">
-    <device />
+    <device>SimGloveGesture</device>
   </GestureProxy>
 </ConfigChunkDB>
 
