Removed vpr::DsoLoader.  It was a class I wrote about five months ago and forgot about entirely.  At this point, it has been superceded (for the most part) by the superior vpr::LibraryLoader class.  There is no point in having both around.
Bumped version to 0.28 (also for the API change in vpr::LibraryLoader).


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13509 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/test/TestSuite/TestCases/DynLoad/Makefile.in
+++ b/juggler/modules/vapor/test/TestSuite/TestCases/DynLoad/Makefile.in
@@ -49,8 +49,7 @@ builddir=	$(shell pwd)
 EXTRA_DEFS+=	-DMODULE_DIR="\"$(builddir)/modules\""
 C_AFTERBUILD=	afterbuild-libs
 
-SRCS=	DsoLoaderTest.cpp	\
-	LibraryFinderTest.cpp	\
+SRCS=	LibraryFinderTest.cpp	\
 	LibraryLoaderTest.cpp	\
 	LibraryTest.cpp
 
