--- a/juggler/modules/vapor/vpr/DynLoad/Makefile.in
+++ b/juggler/modules/vapor/vpr/DynLoad/Makefile.in
@@ -56,8 +56,7 @@ top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 SUBOBJDIR=	$(VPR_LIBRARY)
 
-SRCS=		DsoLoader.cpp		\
-		LibraryFinder.cpp	\
+SRCS=		LibraryFinder.cpp	\
 		LibraryLoader.cpp	\
 		LoaderError.cpp
 
