Made it so APP_EXTRA_LIBS_OSG uses $OSG_LD_LIBRARY_PATH rather than $OSGHOME because the path past $OSGHOME is platform dependent.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13545 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -411,7 +411,7 @@ if test "$OS_TYPE" = "UNIX" ; then
         APP_EXTRA_LIBS_X11="$X_LDFLAGS -lX11"
     fi
 
-    APP_EXTRA_LIBS_OSG='-L$(OSGHOME)/lib -losg -losgDB -losgGA -losgUtil'
+    APP_EXTRA_LIBS_OSG='-L$(OSG_LD_LIBRARY_PATH) -losg -losgDB -losgGA -losgUtil'
 
     if test "x$OGL_LDFLAGS" != "x" ; then
         if test "x$PLATFORM" = "xDarwin" ; then
