Fixed a minor typo in the path to the VRPN Quat library on Windows.  This did not affect the build because the VRPN libraries have been statically linked thus far.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13552 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/configure.in
+++ b/juggler/modules/gadgeteer/configure.in
@@ -430,7 +430,7 @@ if test "x${_with_vrpn}" != "xno" ; then
    fi
 
    if test "x$OS_TYPE" = "xWin32" ; then
-      TEST_VRPN_LDFLAGS="/libpath\"$VRPNROOT/quat/$VRPNLIBDIR\" /libpath:\"$VRPNROOT/vrpn/$VRPNLIBDIR\" vrpn.lib quat.lib"
+      TEST_VRPN_LDFLAGS="/libpath:\"$VRPNROOT/quat/$VRPNLIBDIR\" /libpath:\"$VRPNROOT/vrpn/$VRPNLIBDIR\" vrpn.lib quat.lib"
    else
       # SGI link order seems to clash with default rule VRPN_LDFLAGS
       # reset below to proper value for subsequent builds.
