--- a/PyJuggler/VARS.pl.in
+++ b/PyJuggler/VARS.pl.in
@@ -44,12 +44,14 @@ $VARS{'CXX'} = '@CXX@';
 $VARS{'PYTHON_INCLUDES'}  = '@PYTHON_INCLUDES@';
 $VARS{'PYTHON_VERSION'}   = '@PYTHON_VERSION@';
 $VARS{'PYTHON_LDFLAGS'}   = '@PYTHON_LDFLAGS@';
-$VARS{'PYTHON_LIB'}       = '@PYTHON_LIB@';
+$VARS{'PYTHON_LIB_DBG'}   = '@PYTHON_LIB_DBG@';
+$VARS{'PYTHON_LIB_OPT'}   = '@PYTHON_LIB_OPT@';
 $VARS{'UTIL_LIB'}         = '@UTIL_LIB@';
 $VARS{'PYTHON_LIB_DEPS'}  = '@PYTHON_LIB_DEPS@';
 
 # Linker information.
-$VARS{'BOOST_PYTHON_LDFLAGS'} = '@BOOST_PYTHON_LDFLAGS@';
+$VARS{'BOOST_PYTHON_LDFLAGS_DBG'} = '@BOOST_PYTHON_LDFLAGS_DBG@';
+$VARS{'BOOST_PYTHON_LDFLAGS_OPT'} = '@BOOST_PYTHON_LDFLAGS_OPT@';
 
 # Miscellaneous options.
 $VARS{'bindir'}         = '@bindir@';
@@ -62,6 +64,7 @@ $VARS{'OBJEXT'}         = '@OBJEXT@';
 $VARS{'EXE_NAME_FLAG'}  = '@EXE_NAME_FLAG@';
 $VARS{'OBJ_BUILD_FLAG'} = '@OBJ_BUILD_FLAG@';
 $VARS{'OBJ_NAME_FLAG'}  = '@OBJ_NAME_FLAG@';
+$VARS{'OS_TYPE'}        = '@OS_TYPE@';
 $VARS{'PLATFORM'}       = '@PLATFORM@';
 
 1;
