Do not try to build RWMutex.cpp if we're using POSIX threads.  With Allen's addition of vpr::RWMutexPosix yesterday, we can't compile that file without getting a whole bunch of errors.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13559 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/Sync/Makefile.in
+++ b/juggler/modules/vapor/vpr/Sync/Makefile.in
@@ -59,13 +59,10 @@ SUBOBJDIR=	$(VPR_LIBRARY)
 SRCS=		
 
 ifeq (@SUBSYSTEM@, SPROC)
-SRCS+=		CondVarGeneric.cpp
+SRCS+=		CondVarGeneric.cpp	\
+		RWMutex.cpp
 else
 SRCS+=		Barrier.cpp
-endif
-
-ifneq (@SUBSYSTEM@, NSPR)
-SRCS+=		RWMutex.cpp
 endif
 
 include $(MKPATH)/dpp.obj.mk
