MFH [rev 1.11]: There is a lone .h file in the Boost headers that needs to                 be installed for proper compilation of Python bindings.  I                 thought this fix was already on this branch, but it was                 not.  :(
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH/juggler@13566 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/Makefile.in
+++ b/external/Makefile.in
@@ -116,7 +116,7 @@ endif
 install-boost:
 	@$(SHELL) $(MKINSTALLDIRS) $(includedir)/boost
 	@$(PERL) $(scriptdir)/install-dir.pl -m $(FILE_PERMS)		\
-          $(GROUP_OPT_UNIX) -e .hpp -o $(includedir)/boost 		\
+          $(GROUP_OPT_UNIX) -e .hpp,.h -o $(includedir)/boost 		\
           -i $(EXTROOT_ABS)/boost/boost
 	@$(PERL) $(scriptdir)/install-dir.pl -m $(FILE_PERMS)		\
           $(GROUP_OPT_UNIX) -o $(includedir)/boost/compatibility 	\
